--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,30 @@
   color: #61dafb;
 }
 
+.name {
+  text-align: center;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.menu-list {
+  font-size: 24px;
+  cursor: pointer;
+  margin-right: 24px;
+  text-decoration: none;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
